package topstack_Autoscale;

option java_package = "com.transcend.autoscale.message";
option java_outer_classname = "ResumeProcessesMessage";

message ResumeProcessesRequestMessage {
    required bool typeId = 230;
    required string requestId = 1;
    required string callerAccessKey = 2;
    required string autoScalingGroupName = 3;
    repeated string scalingProcesses = 4;
}

message ResumeProcessesResultMessage {
    required bool typeId = 231;
    required string requestId = 1;
    required string callerAccessKey = 2;
}